--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    {% assign template_name = page.template | default: "default" | downcase %}
+    {% if template_name == "dtfb" %}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Source+Serif+4:opsz,wght@8..60,300;8..60,400;8..60,600;8..60,700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="{{ "/templates/dtfb/web.css" | relative_url }}">
+    {% else %}
+        <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    {% endif %}
 </head>
-<body class="{% if page.section_prefix %}section-prefix{% endif %}">
+<body class="{% if page.section_prefix %}section-prefix{% endif %} template-{{ template_name }}">
+    {% if template_name == "dtfb" %}
+        {% include templates/dtfb/header.html %}
+    {% endif %}
     <div class="wrapper">
         {{ content }}
     </div>
