--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&family=Source+Serif+4:opsz,wght@8..60,300;8..60,400;8..60,600;8..60,700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="{{ "/templates/dtfb/images/DTFB-favicon.png" | relative_url }}">
         <link rel="stylesheet" href="{{ "/templates/dtfb/web.css" | relative_url }}">
     {% else %}
         <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
