Remove DTFB top band and add heading links

--- a/_includes/templates/dtfb/header.html
+++ b/_includes/templates/dtfb/header.html
@@ -1,8 +1,5 @@
 {% assign template_date = page.date | default: "" %}
-<header class="dtfb-hero">
-    <div class="dtfb-hero__band"></div>
-    <div class="dtfb-hero__content"></div>
-</header>
+<header class="dtfb-hero"></header>
 <script>
 (() => {
     const initThemeToggle = () => {
